--- a/index.html
+++ b/index.html
@@ -1211,6 +1211,6 @@
         You can get one here: https://developers.google.com/maps/documentation/javascript/get-api-key
         Once you have your key, replace "YOUR_API_KEY" in the line below.
     -->
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAgtmK-UTgYs7WWU7FC0G9wR8rjHcN0oQ"></script>
 </body>
 </html>
