--- a/index.html
+++ b/index.html
@@ -1211,6 +1211,6 @@
         You can get one here: https://developers.google.com/maps/documentation/javascript/get-api-key
         Once you have your key, replace "YOUR_API_KEY" in the line below.
     -->
-    <script async defer src=AIzaSyBxCCOQjjsn-L5diDAqegPf6FEi3mwAWYA></script>
+    <script async defer src="AIzaSyBxCCOQjjsn-L5diDAqegPf6FEi3mwAWYA"></script>
 </body>
 </html>
