--- a/index.html
+++ b/index.html
@@ -1207,10 +1207,10 @@
         });
     </script>
     <!-- 
-        The Google Maps API key is missing. The map will not load until you add a valid API key.
+       The Google Maps API key is missing. The map will not load until you add a valid API key.
         You can get one here: https://developers.google.com/maps/documentation/javascript/get-api-key
         Once you have your key, replace "YOUR_API_KEY" in the line below.
     -->
-    <script async defer src="AIzaSyBxCCOQjjsn-L5diDAqegPf6FEi3mwAWYA"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxCCOQjjsn-L5diDAqegPf6FEi3mwAWYA"></script>
 </body>
 </html>
