--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,7 @@
             const mapContainer = document.getElementById('map');
             mapContainer.innerHTML = `
                 <iframe
-                    src="https://www.google.com/maps/d/embed?mid=1fFvJ4tN51hG651g9wHqM2l8z0uB8w&ehpvt=1&z=12&ll=39.5028,-0.3801"
+                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxCCOQjjsn-L5diDAqegPf6FEi3mwAWYA&callback=initMap"
                     width="100%"
                     height="100%"
                     style="border:0;"
@@ -1259,6 +1259,5 @@
             updateOaklandTotals();
         });
     </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxCCOQjjsn-L5diDAqegPf6FEi3mwAWYA&callback=initMap"></script>
-</body>
+    </body>
 </html>
