--- a/index.html
+++ b/index.html
@@ -1170,22 +1170,14 @@
             </div>
         </div>
     </div>
-
+<div class="bg-gray-100 p-6 rounded-2xl shadow-inner">
+    <h3 class="text-2xl font-bold text-gray-800 mb-4">Map of Schools</h3>
+    <div class="w-full h-96 rounded-xl overflow-hidden shadow-lg" id="map">
+        <!-- Iframe is loaded here dynamically by JavaScript -->
+    </div>
+</div>
     <script>
-        // Use an alternate map solution that doesn't require an API key
-        // This function will run when the Schools tab is opened
-        function openMap() {
-            const mapContainer = document.getElementById('map');
-            mapContainer.innerHTML = `
-                <iframe
-                    src="https://www.google.com/maps/d/embed?mid=1fFvJ4tN51hG651g9wHqM2l8z0uB8w&ehpvt=1&z=12&ll=39.5028,-0.3801"
-                    width="100%"
-                    height="100%"
-                    style="border:0;"
-                    allowfullscreen=""
-                    loading="lazy">
-                </iframe>
-            `;
+                    `;
         }
 
         // Handle tab switching and map loading
@@ -1406,6 +1398,6 @@
             updateTotals();
             updateOaklandTotals();
         });
-    </script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxCCOQjjsn-L5diDAqegPf6FEi3mwAWYA&callback=initMap"></script>
 </body>
 </html>
